--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scrapePage(page):\n",
     "    page_data = []\n",
     "\n",
-    "    facilities_source = requests.get('https://facilities.umd.edu/info-resources/building-inventory?page=0')\n",
+    "    facilities_source = requests.get('https://facilities.umd.edu/info-resources/building-inventory?page=' + str(page))\n",
     "    soup = bs(facilities_source.content)\n",
     "    for bldg in soup.find_all('article'):\n",
     "        bldg_data = {}\n",
@@ -39,8 +39,8 @@
     "        bldg_id = bldg.find(class_='bldg-top').find('a').contents[0].string\n",
     "        match = re.match(r\"(\\d{3}) - (.*)\", bldg_id)\n",
     "\n",
-    "        bldg_data['id'] = match[1]\n",
-    "        bldg_data['name'] = match[2]\n",
+    "        bldg_data['id'] = [match[1]]\n",
+    "        bldg_data['name'] = [match[2].title()]\n",
     "\n",
     "        bldg_info = bldg.find(id='bldg-info')\n",
     "        for field in bldg_info.find_all(class_='field'):\n",
@@ -62,294 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'string'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m scrapePage(\u001b[39m0\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(data)\n",
-      "\u001b[1;32m/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb Cell 4\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m bldg \u001b[39min\u001b[39;00m soup\u001b[39m.\u001b[39mfind_all(\u001b[39m'\u001b[39m\u001b[39marticle\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     bldg_data \u001b[39m=\u001b[39m {}\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     bldg_id \u001b[39m=\u001b[39m bldg\u001b[39m.\u001b[39;49mfind(class_\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mbldg-top\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mfind(\u001b[39m'\u001b[39;49m\u001b[39ma\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mcontents\u001b[39m.\u001b[39;49mstring[\u001b[39m0\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     match \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39mmatch(\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md\u001b[39m\u001b[39m{3}\u001b[39;00m\u001b[39m) - (.*)\u001b[39m\u001b[39m\"\u001b[39m, bldg_id)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m     bldg_data[\u001b[39m'\u001b[39m\u001b[39mid\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m match[\u001b[39m1\u001b[39m]\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'string'"
-     ]
-    }
-   ],
-   "source": [
-    "scrapePage(0)\n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'string'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m page \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(NUM_PAGES):\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     scrapePage(page)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mallFacilities.json\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     json\u001b[39m.\u001b[39mdump(data, f)\n",
-      "\u001b[1;32m/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb Cell 4\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m bldg \u001b[39min\u001b[39;00m soup\u001b[39m.\u001b[39mfind_all(\u001b[39m'\u001b[39m\u001b[39marticle\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     bldg_data \u001b[39m=\u001b[39m {}\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     bldg_id \u001b[39m=\u001b[39m bldg\u001b[39m.\u001b[39;49mfind(class_\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mbldg-top\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mfind(\u001b[39m'\u001b[39;49m\u001b[39ma\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mcontents\u001b[39m.\u001b[39;49mstring[\u001b[39m0\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     match \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39mmatch(\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md\u001b[39m\u001b[39m{3}\u001b[39;00m\u001b[39m) - (.*)\u001b[39m\u001b[39m\"\u001b[39m, bldg_id)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/iiloni/Personal/umd-facilities-scraper/playground.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m     bldg_data[\u001b[39m'\u001b[39m\u001b[39mid\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m match[\u001b[39m1\u001b[39m]\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'string'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for page in range(NUM_PAGES):\n",
     "    scrapePage(page)\n",
     "\n",
     "with open('allFacilities.json', 'w') as f:\n",
     "    json.dump(data, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/2426\" rel=\"bookmark\"><span>003 - SERVICE BUILDING</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/2427\" rel=\"bookmark\"><span>004 - RITCHIE COLISEUM</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/2428\" rel=\"bookmark\"><span>006 - BUILDING 006</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/2429\" rel=\"bookmark\"><span>007 - POCOMOKE BUILDING</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/268\" rel=\"bookmark\"><span>008 - ANNAPOLIS HALL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/269\" rel=\"bookmark\"><span>009 - MEMORIAL CHAPEL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/270\" rel=\"bookmark\"><span>010 - PATUXENT BUILDING</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/271\" rel=\"bookmark\"><span>011 - BUILDING 011</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/272\" rel=\"bookmark\"><span>014 - HARFORD HALL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/273\" rel=\"bookmark\"><span>015 - CALVERT HALL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/274\" rel=\"bookmark\"><span>016 - BALTIMORE HALL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/275\" rel=\"bookmark\"><span>017 - CECIL HALL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/276\" rel=\"bookmark\"><span>019 - SATELLITE CENTRAL UTILITIES BUILDING (SCUB 1)</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/277\" rel=\"bookmark\"><span>020 - MOTORCYCLE STORAGE BUILDING</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/278\" rel=\"bookmark\"><span>021 - PRINCE GEORGES HALL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/279\" rel=\"bookmark\"><span>022 - KENT HALL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>,\n",
-       " <div class=\"bldg-top\">\n",
-       " <div class=\"\">\n",
-       " <h2>\n",
-       " <a href=\"/node/280\" rel=\"bookmark\"><span>023 - WASHINGTON HALL</span>\n",
-       " </a>\n",
-       " </h2>\n",
-       " </div>\n",
-       " <div class=\"close-btn\">\n",
-       " <button aria-label=\"Close\" class=\"close\" type=\"button\">\n",
-       " <span aria-hidden=\"true\">×</span>\n",
-       " </button>\n",
-       " </div>\n",
-       " </div>]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "facilities_source = requests.get('https://facilities.umd.edu/info-resources/building-inventory?page=0')\n",
-    "soup = bs(facilities_source.content)\n",
-    "\n",
-    "soup.find_all(class_='bldg-top')"
    ]
   }
  ],
